# TEUFEL

./: .clang-format  .travis.yml  CMakeLists.txt  HomogeneousMagnet.cpp  HomogeneousMagnet.h  Makefile  README.md  clean_tests  run_tests  setup.dox  slurm.teufel.sh  teufel.undulator.cpp  travis.yml  undulator.cpp
doc/: UserManual.tex
examples/: CSR.xml  before_U300.sdds  compton_backscattering_10P.xml  compton_backscattering_1P.xml  create_source.xml  dali-tgu200.xml  dali-u100-radiator.xml  diffraction_radiation.xml  elbe-CDR.xml  elbe-EOS.xml  elbe-u300-snapshot.xml  elbe-u300.cpp  elbe-u300.xml  elbe-u300_200pC.xml  fel_interaction.xml  mirror_charge_otr.xml  mpi_example.cpp  prepare_WG_input.xml  radiation_scattering.cpp  sdds_beam.xml  single_charge_wiggler.xml  single_electron_wiggler.cpp  space_charge.xml  test_source.xml  teufel.fel.cpp  undulator_matching.xml  waveguide.xml  waveguide_wiggler.cpp  waveguide_wiggler_mpi.cpp
lib/: FindEigen3.cmake  FindMUPARSER.cmake  FindPUGIXML.cmake  try.cpp
lib/SDDS/: SDDS.h  SDDStypes.h  constants.h  mdb.h
lib/SDDS/demo/: Makefile  sddsdemo.c
lib/SDDS/lzma/: base.h  container.h
lib/SDDS/python/: SDDSPython3-5.2.1-1.debian.10.11.x86_64.rpm  SDDSPython3-5.2.1-1.debian.11.0.x86_64.rpm  SDDSPython3-5.2.1-1.ubuntu.20.04.x86_64.rpm  SDDSPython3-5.2.1-1.ubuntu.22.04.x86_64.rpm
lib/SDDSToolKit-devel-3.4/: SDDS.h  SDDSFortran.h  SDDStypes.h  config.h  contour.h  csa.h  fftpackC.h  hashtab.h  lzma2.h  match_string.h  matlib.h  mdb.h  mdbsunos4.h  minell_csa.h  namelist.h  nn_2d_interpolate.h  non_dominated_sort.h  oagphy.h  pgapack.h  rpn.h  scan.h  table.h  tiff.h  tiffio.h  try.cpp
scripts/: BackwardDiffractionRadiation.ipynb  CreateDiffractionScreen.ipynb  CreateU300mirror.ipynb  MeshedFields.py  Plot_BeamParameters.ipynb  TestCase_BackwardDiffractionRadiation.ipynb  TestCase_DiffractionScreen.ipynb  TestCase_Propagation.ipynb  ToroidalMirror_OL8.ipynb  Vis_Interaction_FEL1D.ipynb  __init__.py  add_OpticalBeams.py  plot_BeamParameters.py  plot_MeshedField.py  plot_ObservationSpectrum.py  plot_ObservationTimeDomain.py  plot_PointObservation.py  plot_Screen.py  plot_Screen_Cross.py  plot_Screen_TD.py  plot_SingleFrequency.py  plot_Snapshot.py  plot_Watch.py  plot_WatchSDDS.py  plot_Watch_Dispersion.py  plot_h5_Screen.py  plot_h5_watch.py  plot_sdds_watch.py  plot_timestep.py  plot_trajectory.py  screen.py  sdds.py  test_matching.py  teufel.py
src/: analysis.cpp  analysis.h  beam.cpp  beam.fwd.h  beam.h  beam.h~  bunch.cpp  bunch.cpp~  bunch.h  bunch.h~  bunch1.cpp  bunch1.h  cavity.cpp  cavity.h  config.h.in  csr2d.cpp  csr2d.h  dipole.cpp  dipole.h  externalfield.cpp  externalfield.h  fel1d.cpp  fel1d.h  fields.cpp  fields.fwd.h  fields.h  fieldtrace.cpp  fieldtrace.h  four_vector.cpp  four_vector.h  gen_grid.cpp  gen_grid.h  global.cpp  global.h  homogeneouselectricfield.cpp  homogeneouselectricfield.h  homogeneousmagnet.cpp  homogeneousmagnet.h  logger.cpp  logger.h  (+37 more)
tests/: BackwardDiffractionScreen.h5  BeamProfile.txt  Bfactor.txt  CSR2d_testing.ipynb  CheckProbe.ipynb  CheckTrajectories.ipynb  CreateBunch.py  DiffractionScreen.h5  Distribution.py  Radiation_Pattern.py  SDDSPlots.sh  TEUFEL-EXAMPLE.txt  View_Particle_Distribution.py  View_Radiation.py  View_Result.py  avg.txt  create_source.xml  csr2d_modulated_beam.xml  csr2d_single_particle.xml  fel1d_modulation.xml  fel1d_radiation.xml  fel_modulation.ipynb  fel_modulation.xml  fel_radiation.ipynb  hybrid.c  hybrid.cpp  modulated_beam.sdds  particletoolbox.py  plots.py  sample_trajectory.py  stdx.txt  test.fel-modulation.py  test.matching.py  teufel.DiffractionScreen.cpp  teufel.EcrossB  teufel.EcrossB.cpp  teufel.RadPush.cpp  teufel.Radiation.cpp  teufel.bunch  teufel.bunch.cpp  (+14 more)
